<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteSmoke"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"

        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_x="0dp"
        android:layout_y="0dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/TabHost_m05" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="391dp"
        android:layout_height="28dp"
        android:layout_x="-5dp"
        android:layout_y="482dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/white_m05" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="24dp"
        android:layout_y="174dp"
        android:gravity="center"
        android:text="@string/_tv_m05_starHour"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="24dp"
        android:layout_y="217dp"
        android:gravity="center"
        android:text="@string/_tv_m05_starDate"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="24dp"
        android:layout_y="119dp"
        android:gravity="center"
        android:text="@string/_tv_m05_uptime"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="26dp"
        android:layout_y="71dp"
        android:gravity="center"
        android:text="@string/_tv_m05_sport"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="25dp"
        android:layout_y="313dp"
        android:gravity="center"
        android:text="@string/_tv_m05_speed"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="28dp"
        android:layout_y="358dp"
        android:gravity="center"
        android:text="@string/_tv_m05_distance"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="30dp"
        android:layout_y="403dp"
        android:gravity="center"
        android:text="@string/_tv_m05_calories"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_x="145dp"
        android:layout_y="304dp"
        android:gravity="center" />

    <Spinner
        android:id="@+id/spinner6"
        android:layout_width="72dp"
        android:layout_height="41dp"
        android:layout_x="134dp"
        android:layout_y="171dp"
        android:background="@color/greyLi" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_x="146dp"
        android:layout_y="348dp"
        android:gravity="center" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_x="145dp"
        android:layout_y="393dp"
        android:gravity="center" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_x="136dp"
        android:layout_y="118dp"
        android:gravity="center" />

    <Spinner
        android:id="@+id/spinner8"
        android:layout_width="72dp"
        android:layout_height="41dp"
        android:layout_x="70dp"
        android:layout_y="254dp"
        android:background="@color/greyLi" />

    <Spinner
        android:id="@+id/spinner10"
        android:layout_width="72dp"
        android:layout_height="41dp"
        android:layout_x="178dp"
        android:layout_y="254dp"
        android:background="@color/greyLi" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_x="264dp"
        android:layout_y="255dp"
        android:text="@string/_tv_m05_year" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_x="151dp"
        android:layout_y="255dp"
        android:text="@string/_tv_m05_month" />

    <Spinner
        android:id="@+id/spinner9"
        android:layout_width="72dp"
        android:layout_height="41dp"
        android:layout_x="289dp"
        android:layout_y="254dp"
        android:background="@color/greyLi" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="226dp"
        android:layout_height="45dp"
        android:layout_x="136dp"
        android:layout_y="71dp"
        android:background="@color/greyLi"
        android:gravity="center" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="208dp"
        android:layout_y="176dp"
        android:text=":"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="31dp"
        android:layout_height="41dp"
        android:layout_x="40dp"
        android:layout_y="254dp"
        android:text="@string/_tv_m05_day" />

    <ImageView
        android:id="@+id/iv_m05_deleteactivity"
        android:layout_width="71dp"
        android:layout_height="wrap_content"
        android:layout_x="305dp"
        android:layout_y="9dp"
        android:gravity="center"
        app:srcCompat="@mipmap/ic_delete" />

    <Button
        android:id="@+id/btn_m05_updateactivity"
        android:layout_width="352dp"
        android:layout_height="37dp"
        android:layout_x="20dp"
        android:layout_y="455dp"
        android:background="@color/ColorPrimary"
        android:gravity="center"
        android:text="@string/_btn_m05t_save"
        android:textColor="@color/colorwhite"
        android:textSize="15dp" />

    <Spinner
        android:id="@+id/spinner7"
        android:layout_width="72dp"
        android:layout_height="41dp"
        android:layout_x="214dp"
        android:layout_y="171dp"
        android:background="@color/greyLi"
        android:spinnerMode="dialog" />


</AbsoluteLayout>