<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:background="@mipmap/fitucab"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:orientation="vertical"
        android:weightSum="16">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_gravity="center"
            app:srcCompat="@mipmap/logofitucabnombreblanco" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="165dp"
            android:layout_weight="1.66"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/tv_m01_intro"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="@dimen/title_standard"
            android:textStyle="bold"
            android:typeface="sans" />

        <Button
            android:id="@+id/btn_m01_comienza"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="47dp"
            android:layout_weight="1"
            android:background="@color/colorBtnConfirmar"
            android:text="@string/btn_m01_comienza"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/text_button_standard"
            android:typeface="sans" />

        <Button
            android:id="@+id/btn_m01_iniciarSesion"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/colorBtnAceptar"
            android:text="@string/btn_m01_iniciaSesion"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/text_button_standard"
            android:typeface="sans" />

    </LinearLayout>

</LinearLayout>